Imports working via catalog API, but with a good bit of updates needed
